# easylend

./: .env.template  .gitattributes  .gitignore  .grype.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .trivyignore  Build-Docker-Check-Grype.ps1  CONTRIBUTING.md  ENV_README.md  README.md  ROADMAP.md  Setup-Envs.ps1  diff_docs.txt  easylend-logo.af  easylend.code-workspace  gap_analysis.md  git-log.txt  setup-envs.sh
.github/workflows/: backend-docker-build.yml  vision-ci.yml  vision-docker-build.yml
assets/: easylend-app-icon.af  easylend-logo.af
backend/: .env.example  README.md  backend_plan.md  docker-compose.local.yml  docker-compose.prod.bup.yml  docker-compose.prod.yml  docker-compose.yml  useful-commands.txt
backend/api/: .env.example  Dockerfile  README.md  diff.txt  diff_api.txt  entrypoint.sh  openapi.json  openapi_main_api.json  pyproject.toml  seed.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 02d034bcaafd_add_is_anonymized_to_users.py  39d07401d54b_initial_database_schema.py  4cc16e6cd3f1_update_ai_evaluation_model_for_step_10b.py  5591d67e520a_add_returning_to_loan_status.py  887a8f5ec941_add_pending_inspection_and_is_deleted.py  97af2da80959_make_ai_evaluation_is_approved_nullable.py  97fd688f2d9a_add_accepted_privacy_policy.py  a8209da1de17_add_updated_at_to_loans.py  aac5afd64c4c_add_uq_kiosk_logical_number_to_lockers.py  b3e1f42c9d7a_add_server_default_to_user_status.py  ee32c9b3d0d8_refactor_user_status_to_enum.py
backend/api/app/: main.py
backend/api/app/api/: deps.py  ws.py
backend/api/app/api/v1/: router.py
backend/api/app/api/v1/endpoints/: admin.py  audit.py  auth.py  equipment.py  images.py  loans.py  roles.py  users.py  vision.py
backend/api/app/core/: audit.py  config.py  db_utils.py  idempotency.py  rate_limit.py  redis_utils.py  security.py  state_machine.py  uploads.py  websockets.py
backend/api/app/db/: database.py  models.py  redis.py
backend/api/app/schemas/: admin.py  audit.py  equipment.py  loan.py  token.py  user.py  vision.py
backend/api/app/tests/: conftest.py  test_admin_api.py  test_audit_api.py  test_auth_api.py  test_checkout_flow.py  test_deps.py  test_equipment_api.py  test_images_api.py  test_loan_timeout_worker.py  test_loans_api.py  test_main.py  test_overdue_worker.py  test_rate_limit.py  test_roles_api.py  test_security.py  test_state_machine.py  test_users_api.py  test_vision_api.py  test_ws_api.py  test_ws_send_command.py
backend/api/app/tests/integration/: conftest.py  test_flow_audit.py  test_flow_checkout.py  test_flow_return.py  test_flow_vision.py
backend/api/app/workers/: loan_timeout_worker.py  overdue_worker.py
backend/api/scripts/: bootstrap.py  deploy_models.py  export_openapi.py  seed.py  seed_dev.py
backend/database/: docker-compose.yml
backend/vision/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  openapi_vision_api.json  pyproject.toml  requirements.txt  test_gpu.py
backend/vision/model_scripts/: laptop_detection_yolo26.py  laptop_seg_yolo26.py
backend/vision/models/detection-injo/: args.yaml  results.csv
backend/vision/models/seg-injo/: args.yaml  results.csv
backend/vision/models/yolo26m-seg_laptop_damage_detection/: args.yaml  results.csv
backend/vision/scripts/: export_openapi.py
backend/vision/tests/: test_vision.py
backend/vision/training/: laptop_detection_yolo26.py  laptop_seg_yolo26.py  training.txt
backend/vision/utils/: webcam.py
docs/: INDEX.md  WALKTHROUGH.md  api_contract.md  architecture.md  architecture.mmd  architecture_logical.mmd  architecture_physical.mmd  easylend_architecture_audit.md  erd.mmd  gap_analysis.md  git_commands.md  workflows.md
docs/api/: 01_rest_principles.md  02_endpoints.md  03_websockets.md  04_return_flow.md
docs/architecture/: 01_topology.md  02_state_machine.md  02_state_machine.mmd  03_concurrency.md  03_concurrency.mmd  04_security.md  04_zero_trust.md  05_user_suspension.md  06_audit_trail.md  07_security.md  07_technical_debt.md  08_technical_debt.md  09_testing.md
docs/database/: 01_schema.md  02_background_workers.md
docs/diagrams/: audit_trail.mmd  security_flow.mmd  sequence_admin_app.mmd  sequence_admin_sync.mmd  sequence_auth.mmd  sequence_catalog.mmd  sequence_checkout.mmd  sequence_model_update.mmd  sequence_quarantine.mmd  sequence_report_damage.mmd  sequence_return.mmd
docs/hardware/: 01_vision_integration.md  02_quarantine_flow.md  wiring_topology.mmd
docs/kiosk-app/: documentation.md  mermaid-flowchart.md
kiosk-app/: device.xml  kiosk_flowchart.mmd  mermaid-flowchart.md
kiosk-app/easylend_kiosk/: README.md  implementation-plan.md  mlkit-documentation.md  pubspec.yaml
kiosk-app/easylend_kiosk/android/: build.gradle.kts
kiosk-app/easylend_kiosk/android/app/: build.gradle.kts
kiosk-app/easylend_kiosk/docs/: debug-credentials.md
kiosk-app/easylend_kiosk/ios/Runner/: Info.plist
kiosk-app/easylend_kiosk/ios/Runner.xcodeproj/: project.pbxproj
kiosk-app/easylend_kiosk/lib/: app.dart  app_router.dart  main.dart  theme.dart
kiosk-app/easylend_kiosk/lib/config/: debug_credentials.dart
kiosk-app/easylend_kiosk/lib/core/: app_exceptions.dart  config.dart  constants.dart
kiosk-app/easylend_kiosk/lib/providers/: providers.dart
kiosk-app/easylend_kiosk/lib/screens/: lending_complete_screen.dart  scan_aztec_screen.dart
kiosk-app/easylend_kiosk/linux/: CMakeLists.txt
kiosk-app/easylend_kiosk/linux/runner/: my_application.cc
kiosk-app/easylend_kiosk/macos/Runner.xcodeproj/: project.pbxproj
kiosk-app/easylend_kiosk/test/: widget_test.dart
kiosk-app/easylend_kiosk/web/: index.html  manifest.json
kiosk-app/easylend_kiosk/windows/: CMakeLists.txt
simulation/: .env.example  README.md  core.py  index.html  main.py  pyproject.toml
simulation/tests/: test_twin.py
vision-box/: README.md  Web-UI-Vision-Box.html  camera.py  hardware.md  main.py  picamera2.md  pyproject.toml  runtime_flow.mmd  test_hw.py  vision_box.py  vision_box_service.txt
(+51 files in other folders)
