[project]
name = "simulation"
version = "0.1.0"
description = "Hardware simulation client for Vision Box"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]
[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.4"]
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = ["DTZ", "S", "I", "UP", "E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/*test_*.py" = ["S101"]
