[project]
name = "vision-box"
version = "0.1.0"
description = "Hardware controller and vision AI capture for EasyLend Kiosk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.3",
    "gpiozero>=2.0.1",
    "pillow>=10.3.0",
    # Let op: picamera2 wordt opzettelijk niet hier vermeld (zie uitleg in picamera2.md)
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.4"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = [
    "DTZ", # datetimez
    "S",   # flake8-bandit (security)
    "I",   # isort
    "UP",  # pyupgrade
    "E",   # pycodestyle
    "F",   # pyflakes
]
ignore = ["E501"] # Ignore noisy 'Line too long' warnings

[tool.ruff.lint.per-file-ignores]
"**/*test_*.py" = ["S101"] # Ignore assert warnings in test files

[tool.pyright]
typeCheckingMode = "standard"

# Custom rules matching the API repo
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeStubs = "none"

exclude = [".venv", "**/__pycache__", "**/node_modules", "**/.*"]

strictDictionaryInference = true
strictListInference = true
strictSetInference = true
reportPropertyTypeMismatch = "error"
reportMatchNotExhaustive = "error"
