[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.133.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.4"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = [
    "DTZ",
    "S",
    "I",
    "UP",
] # datetimez, flake8-bandit (security), isort, pyupgrade

[tool.ruff.lint.per-file-ignores]
"**/*test_*.py" = ["S101"] # Negeer assert waarschuwingen in test bestanden
