[project]
name = "vision"
version = "0.1.0"
description = "AI Vision Service for EasyLend using YOLO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "opencv-python-headless>=4.13.0.92; sys_platform == 'linux'",
    "opencv-python>=4.13.0.92; sys_platform != 'linux'",
    "openvino>=2026.0.0",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8,<9",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = [
    "DTZ",
    "S",
    "I",
    "UP",
    "E",
    "F",
] # datetimez, flake8-bandit (security), isort, pyupgrade, pycodestyle, pyflakes
ignore = ["E501"] # Ignore noisy 'Line too long' warnings

[tool.ruff.lint.per-file-ignores]
"**/*test_*.py" = ["S101"] # Ignore assert warnings in test files

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
